Fix address wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,4 +43,5 @@ body {
     padding: 20px;
     font-size: 12px;
     color: darkgrey;
+    word-wrap: break-word;
 }
